2007-04-17  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.cpp: fixed one of the memory leaks bug

2007-04-17  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_impl.cpp,
	* gameswf/gameswf_sprite.cpp,
	* gameswf/as_classes/as_mcloader.cpp: cleanup

2007-04-17  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_text.cpp: applied the patch from Francois Guibert
	(fixed the cursor position with centered texts)

2007-04-17  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/a lot of files: removed struct movie()
	it's just an artifact of the code's history.

2007-04-15  Thatcher Ulrich <tu@tulrich.com>

	Make things more straightforward for embedders who don't want http
	support linked into gameswf.
	
	* base/tu_file.cpp: remove http support -- moved to net/
	* net/tu_net_file.*, net/Makefile: a tu_file that supports
	HTTP (factored out of tu_file)
	* gameswf/gameswf_test_ogl.cpp: add '-n' flag to control whether to allow
	network access or not.  Support http files explicitly via
	file_opener().
	* gameswf/Makefile: misc fixes

2007-04-15  Vitaly Alexeev <tishka92@yahoo.com>

	* net/http_client.h: HTTP_TIMEOUT is increased up to 10 sec
	* gameswf/as_classes/as_mcloader.cpp: cleanup
	(for slow connections)
	* gameswf/gameswf_sprite.*,
	* gameswf/gameswf_root.*,
	* gameswf/gameswf_movie_def.h,
	* gameswf/gameswf.h:
	get_file_bytes() & get_loaded_bytes() are moved from movie_root to sprite_instance
	because of child movieclip may be created from root movie def (loadMovie() stuff)

2007-04-15  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_action.*,
	* gameswf/gameswf_as_sprite.cpp,
	* gameswf/as_classes/as_mcloader.*:
	Has recollected that target may be both string and pointer.
	load_file() function moved to struct as_environment(), so is more correct.
	Something has simplified.

2007-04-15  Vitaly Alexeev <tishka92@yahoo.com>

	* gameswf/gameswf_impl.cpp,
	* gameswf/gameswf_test_ogl.cpp:
	fixed one of the memory leaks bug
